fix(symbol frames): change internal table spacing

--- a/Content/Styles/SymbolFrames/Site.scss
+++ b/Content/Styles/SymbolFrames/Site.scss
@@ -142,6 +142,10 @@ html, body {
   width: 100.2% !important;
 }
 
+.answerContainer p {
+  padding: 2px;
+}
+
 .tableItem{
   border:3px solid black;
 }
